--- a/notebooks/00_datasets.internals.mangadex.ipynb
+++ b/notebooks/00_datasets.internals.mangadex.ipynb
@@ -114,7 +114,20 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "FileNotFoundError",
+     "evalue": "[Errno 2] No such file or directory: 'credentials.json'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mFileNotFoundError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-8-69f624f39752>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mclient\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mMangaDexClient\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"credentials.json\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-7-99efb414020d>\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, credentials_file)\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mcredentials_file\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m         \u001b[0;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcredentials_file\u001b[0m\u001b[0;34m)\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mconfig_file\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m             \u001b[0mdata\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mconfig_file\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mFileNotFoundError\u001b[0m: [Errno 2] No such file or directory: 'credentials.json'"
+     ]
+    }
+   ],
    "source": [
     "client = MangaDexClient(\"credentials.json\")"
    ]
@@ -254,7 +267,11 @@
     "    manga. We need to investigate this further, so we do not run into the issue of having too much\n",
     "    data to handle unexpectedly if this behavior changes suddenly.\n",
     "    \"\"\"\n",
-    "    client = MangaDexClient(\"credentials.json\")\n",
+    "    try:\n",
+    "        client = MangaDexClient('credentials.json')\n",
+    "    except FileNotFoundError as e:\n",
+    "        e.strerror = \"The current version expects a credentials.json file at cwd.\"\n",
+    "        raise e\n",
     "    tags = client.get_manga_tags()\n",
     "    mangas = [\n",
     "        manga\n",
@@ -288,16 +305,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/markdown": "<h4 id=\"get_covers_for_all_tags\" class=\"doc_header\"><code>get_covers_for_all_tags</code><a href=\"__main__.py#L5\" class=\"source_link\" style=\"float:right\">[source]</a></h4>\n\n> <code>get_covers_for_all_tags</code>(**`num_mangas`**=*`20`*)\n\nReturns a pandas DataFrame with covers image urls for each tag in the MangaDex database.\n\nIt may be possible for a manga to show up in the query for multiple different tags, so we\ndeduplicate those cases.\n\nTODO: There seems to be an issue with the API where only one cover image is returned for each\nmanga. We need to investigate this further, so we do not run into the issue of having too much\ndata to handle unexpectedly if this behavior changes suddenly.",
-      "text/plain": "<IPython.core.display.Markdown object>"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "show_doc(get_covers_for_all_tags)"
    ]
@@ -313,71 +321,22 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "180aa2ad43d74381985463517bad2ba8",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": "  0%|          | 0/76 [00:00<?, ?it/s]"
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>mangaId</th>\n      <th>url</th>\n      <th>filename</th>\n      <th>tags</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>2661ccb2-9b4e-42bb-9697-bed499b9b363</td>\n      <td>https://uploads.mangadex.org/covers/2661ccb2-9...</td>\n      <td>2661ccb2-9b4e-42bb-9697-bed499b9b363_be17ccee-...</td>\n      <td>Oneshot|Reincarnation|Historical|Romance|Antho...</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>cb34b520-fd48-474e-8d06-a7a25473342e</td>\n      <td>https://uploads.mangadex.org/covers/cb34b520-f...</td>\n      <td>cb34b520-fd48-474e-8d06-a7a25473342e_5035057d-...</td>\n      <td>Oneshot|Romance|Comedy|Slice of Life</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>ab468776-27a5-456d-8f58-e058059531c9</td>\n      <td>https://uploads.mangadex.org/covers/ab468776-2...</td>\n      <td>ab468776-27a5-456d-8f58-e058059531c9_4a18ccf6-...</td>\n      <td>Oneshot|Romance|Comedy|Anthology|Office Worker...</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>11afa5c2-41dc-4cf3-8451-f306a3caf1ab</td>\n      <td>https://uploads.mangadex.org/covers/11afa5c2-4...</td>\n      <td>11afa5c2-41dc-4cf3-8451-f306a3caf1ab_31616f14-...</td>\n      <td>Oneshot|Romance|Comedy|Anthology|Office Worker...</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>cd8197af-e771-46de-82a0-5e70f977e6a1</td>\n      <td>https://uploads.mangadex.org/covers/cd8197af-e...</td>\n      <td>cd8197af-e771-46de-82a0-5e70f977e6a1_a5a3b64c-...</td>\n      <td>Oneshot|Romance|Comedy|Anthology|School Life</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": [
-       "                                mangaId  \\\n",
-       "0  2661ccb2-9b4e-42bb-9697-bed499b9b363   \n",
-       "1  cb34b520-fd48-474e-8d06-a7a25473342e   \n",
-       "2  ab468776-27a5-456d-8f58-e058059531c9   \n",
-       "3  11afa5c2-41dc-4cf3-8451-f306a3caf1ab   \n",
-       "4  cd8197af-e771-46de-82a0-5e70f977e6a1   \n",
-       "\n",
-       "                                                 url  \\\n",
-       "0  https://uploads.mangadex.org/covers/2661ccb2-9...   \n",
-       "1  https://uploads.mangadex.org/covers/cb34b520-f...   \n",
-       "2  https://uploads.mangadex.org/covers/ab468776-2...   \n",
-       "3  https://uploads.mangadex.org/covers/11afa5c2-4...   \n",
-       "4  https://uploads.mangadex.org/covers/cd8197af-e...   \n",
-       "\n",
-       "                                            filename  \\\n",
-       "0  2661ccb2-9b4e-42bb-9697-bed499b9b363_be17ccee-...   \n",
-       "1  cb34b520-fd48-474e-8d06-a7a25473342e_5035057d-...   \n",
-       "2  ab468776-27a5-456d-8f58-e058059531c9_4a18ccf6-...   \n",
-       "3  11afa5c2-41dc-4cf3-8451-f306a3caf1ab_31616f14-...   \n",
-       "4  cd8197af-e771-46de-82a0-5e70f977e6a1_a5a3b64c-...   \n",
-       "\n",
-       "                                                tags  \n",
-       "0  Oneshot|Reincarnation|Historical|Romance|Antho...  \n",
-       "1               Oneshot|Romance|Comedy|Slice of Life  \n",
-       "2  Oneshot|Romance|Comedy|Anthology|Office Worker...  \n",
-       "3  Oneshot|Romance|Comedy|Anthology|Office Worker...  \n",
-       "4       Oneshot|Romance|Comedy|Anthology|School Life  "
-      ]
-     },
-     "execution_count": null,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "get_covers_for_all_tags().head()"
+    "get_covers_for_all_tags('../credentials.json').head()"
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
+   "display_name": "Python 3.7.10 64-bit ('base': conda)",
    "name": "python3"
   }
  },
