--- a/notebooks/02_models.ipynb
+++ b/notebooks/02_models.ipynb
@@ -224,6 +224,7 @@
    "outputs": [],
    "source": [
     "# export\n",
+    "from fastai.vision.all import *\n",
     "import json\n",
     "\n",
     "def load_learner_and_predict(path, image_data, thresh=0.5):\n",
